--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,10 +83,34 @@
         <activity
             android:name=".seasonsBeerList"
             android:label="@string/title_activity_seasons_beer_list"
-            android:parentActivityName=".Seasons">
+            android:parentActivityName=".Seasons" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.kooknluke.montanabreweries.Seasons" />
+        </activity>
+        <activity
+            android:name=".townBeerList"
+            android:label="@string/title_activity_town_beer_list"
+            android:parentActivityName=".Town" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.kooknluke.montanabreweries.Town" />
+        </activity>
+        <activity
+            android:name=".stateBeerList"
+            android:label="@string/title_activity_state_beer_list"
+            android:parentActivityName=".State" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.kooknluke.montanabreweries.State" />
+        </activity>
+        <activity
+            android:name=".nutritionBeerList"
+            android:label="@string/title_activity_nutrition_beer_list"
+            android:parentActivityName=".Nutrition" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.kooknluke.montanabreweries.Nutrition" />
         </activity>
     </application>
 
