--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.kooknluke.montanabreweries.beerHistory" />
         </activity>
+        <activity
+            android:name=".BeerInfo"
+            android:label="@string/title_activity_beer_info"
+            android:parentActivityName=".beerList" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.kooknluke.montanabreweries.beerList" />
+        </activity>
     </application>
 
 </manifest>
