--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.kooknluke.montanabreweries.StaticStore"
         android:allowBackup="true"
         android:icon="@drawable/montanabrews"
         android:label="@string/app_name"
@@ -132,7 +133,7 @@
                 android:value="com.kooknluke.montanabreweries.beerHistory" />
         </activity>
         <activity
-            android:name=".BeerInfo"
+            android:name=".beerInfo"
             android:label="@string/title_activity_beer_info"
             android:parentActivityName=".beerList" >
             <meta-data
