--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services:9.0.0'
+    compile 'com.google.firebase:firebase-ads:9.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
