--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:icon="@drawable/montanabrews"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <!--This meta-data tag is required to use Google Play Services.-->
+        <meta-data android:name="com.google.android.gms.version"
+         android:value="@integer/google_play_services_version" />
         <activity
             android:name=".Home"
             android:label="@string/app_name" >
