--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,15 @@ android {
     compileSdkVersion 23
     buildToolsVersion '22.0.1'
 
+    signingConfigs {
+        myConfig {
+            storeFile file("../keyz.jks")
+            storePassword "google14"
+            keyAlias "Montanab"
+            keyPassword "google14"
+        }
+    }
+
     defaultConfig {
         applicationId "com.kooknluke.montanabreweries"
         minSdkVersion 15
@@ -15,6 +24,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.myConfig
         }
     }
     compileOptions{
