--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.google.android.gms:play-services:9.0.0'
     compile 'com.google.firebase:firebase-ads:9.0.0'
+    compile 'com.google.android.gms:play-services-ads:9.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
