--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kooknluke.montanabreweries" >
+    package="com.kooknluke.abrewforyou" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name=".StaticStore"
+        android:name="com.kooknluke.abrewforyou.StaticStore"
         android:allowBackup="true"
         android:icon="@drawable/montanabrews"
         android:label="@string/app_name"
@@ -23,7 +23,7 @@
         <meta-data android:name="com.google.android.gms.version"
          android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".Home"
+            android:name="com.kooknluke.abrewforyou.Home"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,60 +32,60 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Beer"
+            android:name="com.kooknluke.abrewforyou.Beer"
             android:label="@string/title_activity_beer"
-            android:parentActivityName=".Home" >
+            android:parentActivityName="com.kooknluke.abrewforyou.Home" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.kooknluke.montanabreweries.Home" />
+                android:value="com.kooknluke.abrewforyou.Home" />
         </activity>
         <activity
-            android:name=".Breweries"
+            android:name="com.kooknluke.abrewforyou.Breweries"
             android:label="@string/title_activity_breweries"
-            android:parentActivityName=".Home" >
+            android:parentActivityName="com.kooknluke.abrewforyou.Home" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.kooknluke.montanabreweries.Home" />
+                android:value="com.kooknluke.abrewforyou.Home" />
         </activity>
         <activity
-            android:name=".Town"
+            android:name="com.kooknluke.abrewforyou.Town"
             android:label="@string/title_activity_town"
-            android:parentActivityName=".Home" >
+            android:parentActivityName="com.kooknluke.abrewforyou.Home" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.kooknluke.montanabreweries.Home" />
+                android:value="com.kooknluke.abrewforyou.Home" />
         </activity>
         <activity
-            android:name=".State"
+            android:name="com.kooknluke.abrewforyou.State"
             android:label="@string/title_activity_state"
-            android:parentActivityName=".Home" >
+            android:parentActivityName="com.kooknluke.abrewforyou.Home" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.kooknluke.montanabreweries.Home" />
+                android:value="com.kooknluke.abrewforyou.Home" />
         </activity>
         <activity
-            android:name=".Seasons"
+            android:name="com.kooknluke.abrewforyou.Seasons"
             android:label="@string/title_activity_seasons"
-            android:parentActivityName=".Home" >
+            android:parentActivityName="com.kooknluke.abrewforyou.Home" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.kooknluke.montanabreweries.Home" />
+                android:value="com.kooknluke.abrewforyou.Home" />
         </activity>
         <activity
-            android:name=".beerList"
+            android:name="com.kooknluke.abrewforyou.beerList"
             android:label="@string/title_activity_beer_list"
-            android:parentActivityName=".Beer" >
+            android:parentActivityName="com.kooknluke.abrewforyou.Beer" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.kooknluke.montanabreweries.Beer" />
+                android:value="com.kooknluke.abrewforyou.Beer" />
         </activity>
         <activity
-            android:name=".beerInfo"
+            android:name="com.kooknluke.abrewforyou.beerInfo"
             android:label="@string/title_activity_beer_info"
-            android:parentActivityName=".beerList" >
+            android:parentActivityName="com.kooknluke.abrewforyou.beerList" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.kooknluke.montanabreweries.beerList" />
+                android:value="com.kooknluke.abrewforyou.beerList" />
         </activity>
 
         <meta-data
@@ -96,11 +96,11 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".Map"
+            android:name="com.kooknluke.abrewforyou.Map"
             android:label="@string/title_activity_map" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.kooknluke.montanabreweries.Home" />
+                android:value="com.kooknluke.abrewforyou.Home" />
         </activity>
     </application>
 
